@@ -1,6 +1,6 @@
 Package: digest
-Version: 0.4.1
-Date: $Date: 2007/09/28 17:54:44 $
+Version: 0.4.2
+Date: $Date: 2009-12-03 16:42:47 +0100 (Thu, 03 Dec 2009) $
 Author: Dirk Eddelbuettel <edd@debian.org> with contributions by
         Antoine Lucas, Jarek Tuszynski, Henrik Bengtsson and Simon
         Urbanek
@@ -14,7 +14,7 @@ Description: The digest package provides functions for the creation of
         FIPS-180-1 and FIPS-180-2, and the crc32 algorithm is described
         in ftp://ftp.rocksoft.com/cliens/rocksoft/papers/crc_v3.txt.
         For md5, sha-1 and sha-256, this packages uses small standalone
-        C implementations that were provided by Christophe Devine. For
+        implementations that were provided by Christophe Devine. For
         crc32, code from the zlib library is used.
  .
  Please note that this package is not meant to be deployed for
@@ -23,6 +23,8 @@ Description: The digest package provides functions for the creation of
 Depends: R (>= 2.4.1)
 License: GPL-2
 URL: http://dirk.eddelbuettel.com/code/digest.html
-Packaged: 2009-09-24 12:38:47 UTC; edd
 Repository: CRAN
-Date/Publication: 2009-09-24 15:59:03
+Repository/R-Forge/Project: digest
+Repository/R-Forge/Revision: 28
+Date/Publication: 2009-12-06 09:22:26
+Packaged: 2009-12-03 21:07:51 UTC; rforge
